--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
 {% block body %}
 	<div class="center">
     <div class="form">
-      <form action="/" method="post">
+      <form action="/register" method="post">
         <label>Username</label>
   			<input type="text" name="username">
         <label>Password</label>
@@ -16,6 +16,7 @@
         <input type="password" name="confirm">
   			<button type="submit">Register</button>
   		</form>
+			<div class="error">{{message}}</div>
     </div>
 	</div>
 {% endblock %}
